# attendance

./: README.md  cli_cmds.py  manage.py  pyproject.toml  routes.md  seed.py  todo.md
app/: __init__.py  aulas.py  auth.py  main.py  models.py  webapp.py
app/auth/: __init__.py  controller.py  loaders.py
app/controllers/: __init__.py  aulas_controllers.py  main.py
app/models/: __init__.py  aula.py  professor.py
app/templates/: aula.html  base.html  codigo_aula.html  index.html  login.html  new_student.html  presenca.html  profile.html  show_aula.html  signup.html  turmas.html
app/templates/aulas/: codigo_aula.html  new.html  new_student.html  show.html
app/templates/auth/: login.html  signup.html
